Fix issues on Firefox

--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@ html, body {
     width: 33.33%;
     width: calc(100% / 3);
     height: 100%;
-    transition: transform-origin 400ms, transform 400ms, opacity 400ms;
+    display: none;
+    opacity: 0;
+    transition: transform-origin 400ms, transform 400ms, opacity 400ms;    
 }
 .menu-element.left .menu-element-content:hover, .menu-element.right .menu-element-content:hover, .menu-element.center .menu-element-content {
     box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 1);
@@ -45,26 +47,34 @@ html, body {
 .menu-element.left:hover, .menu-element.right:hover {
     cursor: pointer;
 }
-.menu-element.left {
-    transform-origin: 100% 50%;
-    transform: translateX(0) rotate3d(0, 1, 0, -45deg);
-}
-.menu-element.center {
-    transform: translateX(100%);
-}
-.menu-element.right {
-    transform-origin: 0% 50%;
-    transform: translateX(200%) rotate3d(0, 1, 0, 45deg);
+.menu-element.left-out,
+.menu-element.left,
+.menu-element.center,
+.menu-element.right,
+.menu-element.right-out {
+    display: block;
 }
 .menu-element.left-out {
     transform-origin: 100% 50%;
     transform: translateX(-50%) rotate3d(0, 1, 0, -76deg);
-    opacity: 0;
+}
+.menu-element.left {
+    transform-origin: 100% 50%;
+    transform: translateX(0) rotate3d(0, 1, 0, -45deg);
+    opacity: 1;
+}
+.menu-element.center {
+    transform: translateX(100%);
+    opacity: 1;
+}
+.menu-element.right {
+    transform-origin: 0% 50%;
+    transform: translateX(200%) rotate3d(0, 1, 0, 45deg);
+    opacity: 1;
 }
 .menu-element.right-out {
     transform-origin: 0% 50%;
     transform: translateX(250%) rotate3d(0, 1, 0, 76deg);
-    opacity: 0;
 }
 .menu-element-background, .menu-element-content {
     position: absolute;
@@ -93,8 +103,4 @@ html, body {
     display: inline-block;
     font-size: 0;
     line-height: 0;
-}
-
-.hide {
-    display: none !important;
 }
